--- a/CSS/main.css
+++ b/CSS/main.css
@@ -596,3 +596,11 @@ transition: opacity .1s linear;
   height: 100%;
 }
 
+
+
+
+@media screen and (max-width:746px)  {
+    * {display: none; }
+
+}
+
