--- a/CSS/main.css
+++ b/CSS/main.css
@@ -375,6 +375,7 @@ transition: opacity .1s linear;
   margin-top: 4%;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 1%;
 }
 
 
